# axtp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FAQ.md  KICKOFF.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  chatgpt-recommmend.md  codex-review.md  faq2.md  gemini-recommend.md  generator-spec.md  kickoff.md  review.md
.claude/: doc-improvement-plan.md  doc-review.md
.claude/skills/: axtp-add-domain.md
.github/: CODEOWNERS
.github/workflows/: notify-runtimes.yml  spec-release-dispatch.yml  validate-conformance.yml
adapters/legacy-protocols/: AXDP源码协议扫描清单.md  VM33协议文档.md
conformance/: CONFORMANCE_LEVELS.md  README.md  manifest.yaml
conformance/profiles/: framed-binary.yaml  stream.yaml
conformance/schemas/: conformance-case.schema.json  conformance-result.schema.json
conformance/validator-fixtures/: execution_metadata.yaml  semantic_contracts.yaml
contract/mcp/: capability_registry.generated.json  error_code.generated.json  event_registry.generated.json  legacy_mapping.generated.json  method_registry.generated.json  schema.generated.json
contract/protocol/: axtp.protocol.yaml
contract/registry/: version.yaml
contract/test-vectors/: compact_message_id_overflow.hex  event_audio_algorithm_config_changed.hex  rpc_audio_set_algorithm_config.hex
docs/: README.md
docs/architecture/: AXTP-Capability-Model-v2.md  README.md  domain-feature-classification.md  protocol-lifecycle-boundaries.md
docs/archive/: README.md
docs/audits/: README.md  audio-rewrite-plan.md  business-module-audit.md  module-review-checklist.md  registry-codec-tooling-audit.md  specs-audit.md
docs/business/: README.md  camera-image-settings.md  camera-lens-control.md  cast-reciever-uxplay.md  cast-rxtx-paring.md  device-firmware-ota.md  device-firmware-update.md  device-streaming.md  device-system-info.md  video-framing-modes.md
docs/conformance/: CONFORMANCE_LEVELS.md  README.md  manifest.yaml
docs/demo/: 21-AXTP-Cpp-Demo实现规范.md  22-AXTP-MVP-Normative-Demo.md  README.md  hid-json-audio-demo.md
docs/dev/: AXTPCTL_COMMAND_DESIGN.md  AXTP_CORE_API_DESIGN.md  AXTP_CPP_EXECUTION_FLOW.md  AXTP_CPP_RUNTIME_PATTERNS.md  AXTP_CPP_STYLE.md  AXTP_FLUTTER_RUNTIME_PATTERNS.md  AXTP_RD_KICKOFF_GUIDE.md  AXTP_SDK_API_DESIGN.md
docs/flows/: README.md  audio-algorithm-level-control.md  camera-image-settings.md  camera-lens-control.md  cast-reciever-uxplay.md  cast-rxtx-paring.md  device-firmware-update.md  device-streaming-audio-video.md  device-system-info.md  signage-device-management.md  video-framing-modes.md
docs/guides/: core-protocol-flow.md  how-to-use.md  legacy-migration.md  product.md  protocol-maintainer-sop.md  protocol-maintainer.md  quickstart.md  runtime-mvp-conformance.md  runtime.md  testing-conformance-quickstart.md  testing.md
docs/how-to-use/: AXTP_How_To_Use.md
docs/kickoff/: AXTP_R&D_Kickoff.md
docs/legacy-classification/: README.md  audio.md  auth.md  camera.md  device.md  diagnostic.md  firmware.md  input.md  legacy-protocol-classification.csv  log.md  network.md  output.md  privacy.md  room.md  sensor.md  signage.md  storage.md  system.md  video.md
docs/legacy-migration/: MIGRATION_DASHBOARD.md  README.md
docs/legacy-protocols/: NearHub-Launcher数字标牌设备管理通用管理命令.md
docs/product/: domain-status.md  protocol-draft-health.md  roadmap.md
docs/protocol/: README.md  draft-conventions.md
docs/release/: AXTP_RUNTIME_SPEC_LOCK.md  AXTP_RUNTIME_SPEC_LOCK.zh-CN.md  AXTP_RUNTIME_UPDATE_FLOW.md  AXTP_SPEC_RELEASE_CHECKLIST.md  AXTP_SPEC_VERSIONING.md  (+4 more)
generators/: package.json
legacy-protocols/: AXDP_MethodId_Registry_v2.xlsx  AXDP设备能力协议集.xlsx  VM33_Protocol_V1_V2_Mapping.xlsx
outputs/: README.md
protocol/: axtp.protocol.yaml
release/: AXTP_RUNTIME_SPEC_LOCK.md  AXTP_RUNTIME_SPEC_LOCK.zh-CN.md  AXTP_RUNTIME_UPDATE_FLOW.md  AXTP_SPEC_RELEASE_CHECKLIST.md  AXTP_SPEC_RELEASE_CHECKLIST.zh-CN.md  AXTP_SPEC_VERSIONING.md  AXTP_SPEC_VERSIONING.zh-CN.md  CHANGELOG.md  README.md  manifest.template.yaml
runtimes/cpp-core/: ARCHITECTURE.md  CMakeLists.txt  MOSCULER_COMPATIBILITY.md
runtimes/cpp-core/include/axtp/broker/: axtp_broker.h  broker_context.h  broker_flow_control.h  broker_sink.h  broker_task.h  business_executor.h  business_router.h  middleware_chain.h
runtimes/cpp-core/include/axtp/core/: axtp_core.h  control_session.h  pending_call_table.h  rpc_dispatcher.h  session_context.h  stream_session.h
runtimes/cpp-core/include/axtp/inbound/: axtp_inbound_processor.h  frame_decoder.h  message_reassembler.h  payload_decoder.h
runtimes/cpp-core/include/axtp/io/: byte_reader.h  byte_sink.h  crc16.h
runtimes/cpp-core/include/axtp/legacy/: legacy_command.h  legacy_error_mapper.h  legacy_frame_decoder.h  legacy_frame_encoder.h  legacy_method_mapper.h  legacy_protocol_adapter.h
runtimes/cpp-core/include/axtp/model/: payload.h  protocol_types.h
runtimes/cpp-core/include/axtp/mux/: protocol_mux.h
runtimes/cpp-core/include/axtp/outbound/: axtp_outbound_processor.h
runtimes/cpp-core/include/axtp/transport/: json_rpc_decoder.h  json_rpc_encoder.h  mock_transport.h  tcp_transport.h  transport_profile.h  websocket_json_rpc_adapter.h  websocket_transport.h
runtimes/cpp-core/tests/: phase1_model_io_test.cpp  phase2_inbound_test.cpp  phase4_core_test.cpp  phase6_real_transport_test.cpp  phase7_broker_test.cpp  phase8_api_surface_test.cpp  phase8_legacy_test.cpp
runtimes/cpp/core/: CMakeLists.txt
runtimes/cpp/core/include/runtime/: axtp_endpoint.hpp
runtimes/cpp/core/include/transport/: transport.hpp
runtimes/cpp/tools/axtpctl/: CMakeLists.txt
runtimes/cpp/tools/axtpctl/src/: audio_demo_handlers.hpp  hid_audio_device_demo.cpp  main.cpp
runtimes/cpp/tools/axtpctl/tests/: hid_audio_demo_e2e_test.cpp  hid_local_backend_test.cpp
scripts/: build-spec-artifact.sh  check-generated-drift.sh  check-links.mjs  check-protocol-status.mjs  check-release-artifact.sh  print-spec-version.sh  validate-conformance.mjs
specs/: 00-glossary.md  10-contract.md  20-core.md  30-registry.md  40-codec.md  50-tooling.md  README.md
workspace/: README.md
(+922 files in other folders)
